# rust_rocket_template

./: .env  .gitignore  README.md  compose.yaml
backend/: Cargo.toml
backend/migrations/: 02_user-up.sql
backend/src/: .rustc_info.json  cors.rs  database.rs  lib.rs  main.rs
backend/src/models/: response.rs
backend/src/routes/: home.rs
backend/src/routes/websocket/: mod.rs  models.rs  ws_rs.rs
backend/static/css/: base.css  home.css
backend/templates/: base.html.tera  home.html.tera
