[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]

rocket = { version = "0.5.1", features = ["json", "uuid", "serde_json", "secrets"] }
dotenvy = "0.15.7"
sqlx = {version = "0.8.3", features = ["postgres", "runtime-async-std", "runtime-tokio"]}
ws = "0.9.2"
# bcrypt = "0.17.0"
# chrono = "0.4.40"
# uuid = {version = "1.15.1", features = ["v4"]}
futures = "0.3.31"
# regex = "1.11.1"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]

[profile.dev.package.sqlx-macros]
opt-level = 3